# kouh

./: CMakeLists.txt  LICENSE  README.md
include/: catch2
include/kouh/: Diagnostics.hh  FlatMap.hpp  FlatMapDetails.hpp  FlatUnorderedSet.hpp  OwningPointerMark.hpp  ScopeExit.hpp  Spinlock.hh
tests/: CMakeLists.txt  TestFlatMap.cpp  TestFlatUnorderedSet.cpp  TestOwningPointerMark.cpp  TestSpinlock.cpp  catch2
